Aggiunti i dataset corretti e analisi what-if